--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /.idea
+/*.iml
+/out
 
 # Compiled class file
 *.class
@@ -23,3 +25,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/out/
